<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

<!--    DASHBOARD FRAGMENT-->
    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="id.insinyurdigital.doi.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/from_dashboard_to_generate_voucher"
            app:destination="@id/navigation_generate_voucher"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_generate_voucher"
        android:name="id.insinyurdigital.doi.ui.generate.GenerateVoucherFragment"
        android:label="@string/cetak_voucher"
        tools:layout="@layout/fragment_generate_voucher">
        <argument
            android:name="categoryName"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="isEdit"
            app:argType="boolean"
            app:nullable="false" />
        <argument
            android:name="productId"
            app:argType="string"
            app:nullable="true" />
        <action
            android:id="@+id/action_addProductFragment_to_homeFragment"
            app:destination="@id/navigation_dashboard"
            app:popUpTo="@id/navigation_dashboard"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="id.insinyurdigital.doi.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="id.insinyurdigital.doi.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>