<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        app:layout_constraintTop_toTopOf="parent">

        <id.insinyurdigital.doi.view.WaveView
            android:id="@+id/waveView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/icons8_profit_480"
            app:iconSize="40dp"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="165dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/by_day"
                android:textColor="@color/colorTextPrimary"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_month"
                android:textSize="13sp"
                android:textColor="@color/colorTextPrimary"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tvBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:gravity="center_horizontal"
            android:text="Rp. 200.000"
            android:textColor="@color/colorTextPrimary"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tvBalanceReal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Rp. 400.000"
            android:textColor="@color/colorTextPrimary"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/tvBalance"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <Space
        android:id="@+id/space"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="@id/constraint"
        app:layout_constraintStart_toStartOf="@id/constraint"
        app:layout_constraintEnd_toEndOf="@id/constraint" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/space">

        <Button
            android:id="@+id/btn_print"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="4dp"
            android:minHeight="0dp"
            android:padding="12dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="8dp"
            android:text="@string/cetak_voucher"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@color/colorTextSecondary"
            android:background="@drawable/ic_button_background_transparent"/>

        <Button
            android:id="@+id/btn_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="4dp"
            android:minHeight="0dp"
            android:padding="12dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="0dp"
            android:text="@string/scan_voucher"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@color/colorTextSecondary"
            android:background="@drawable/ic_button_background_transparent"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/recent_activity"
        android:textSize="13sp"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"/>

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_4"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_activity"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@id/tv_4"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <LinearLayout
        android:id="@+id/ly_empty"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="50dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tv_4"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:text="empty_title"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/colorTextPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="empty desc"
            android:textSize="14sp"
            android:textColor="@color/colorTextSecondary"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>